--- a/css/td.ui.css
+++ b/css/td.ui.css
@@ -1,6 +1,9 @@
 
 :root {
     --space-between-signals: 12px;
+    --background-color: #212121;
+    --text-color: lightgray;
+    --gutter-color: black;
 }
 
 .td {
@@ -10,10 +13,12 @@
     width: 100%;
     height: 100%;
     min-height: 160px;
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 
 .td > .gutter {
-    background-color: #eee;
+    background-color: var(--gutter-color);
     background-repeat: no-repeat;
     background-position: 50%;
 }
@@ -29,6 +34,7 @@
     justify-content: space-evenly;
     height: 100%;
     text-align: right;
+    font-size: calc(var(--cycle-height) * 0.67);
 }
 
 .td-signal_name {
@@ -50,14 +56,48 @@
     flex-direction: column;
 }
 
+.td-signal_quickviews {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+    text-align: right;
+}
+
 .td-signal_contents_wrapper {
-    overflow: auto;
+    position: relative;
+    overflow-x: scroll;
+    overflow-y: none;
+    user-select: none;
+    outline: none;
+}
+
+.td-signal_contents_wrapper::-webkit-scrollbar {
+    height: 10px;
+}
+
+.td-signal_contents_wrapper::-webkit-scrollbar-thumb {
+    background-color: var(--text-color);
+    border-radius: 10px;
+    background-clip: padding-box;
+    border: 2px solid transparent;
+}
+
+.td-signal_contents_wrapper::-webkit-scrollbar-thumb:hover {
+    background-color: var(--text-color);
+}
+
+.td-signal_contents_wrapper::-webkit-scrollbar-thumb:active {
+    background-color: var(--text-color);
+}
+
+.td-signal_contents_wrapper::-webkit-scrollbar-track {
+    background-color: #454c5a;
 }
 
 .td-signal_contents {
     display: inline-flex;
     flex-direction: column;
-    justify-content: space-evenly;
     height: 100%;
 }
 
@@ -77,4 +117,15 @@
 .td-signal_content_detail {
     display: flex;
     flex-direction: column;
+}
+
+.td-cursor {
+    width: 0;
+    height: 100%;
+    position: absolute;
+    float: left;
+    top: 0;
+    border-left: 2px solid rgb(232, 232, 0);
+    border-right: 2px solid rgb(232, 232, 0);
+    border-radius: 1px;
 }
